# template-python-package

./: README.md  cookiecutter.json
{{cookiecutter.name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.name}}/.github/workflows/: cd.yml  ci.yml
{{cookiecutter.name}}/src/{{cookiecutter.name}}/: __init__.py  cli.py  settings.py  {{ cookiecutter.name }}.py
{{cookiecutter.name}}/tests/: test_{{cookiecutter.name}}.py
