[project]
name = "{{ cookiecutter.name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
maintainers = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "aioresponses",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.name }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.name }}"

[project.scripts]
{{ cookiecutter.name}} = "{{ cookiecutter.name}}.cli:main"

[pytest]
mock_use_standalone_module = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = "tests/"

[tool.ruff]
exclude = [
    ".venv",
    "build",
    "dist",
    "migrations",
    "__init__.py"
]
include = ["*.py", "*.pyx"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = [
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
